# microNeRF

./: .gitignore  CMakeLists.txt  README.md
data/: config.json  tinynerf_config.json
data/weights/: tinynerf_weights.txt
include/tiny-cuda-nn/: cutlass_matmul.h  gpu_memory.h  loss.h
include/tiny-cuda-nn/losses/: photometric.h
include/tiny-cuda-nn/networks/: fully_fused_mlp.h
nerfdata/tinylego/: n_alpha.npy  n_dists.npy  n_dv.npy  n_raysd.npy  n_rayso.npy  n_rgb_map.npy  n_sigma_a.npy  n_weights.npy  transforms.json  weights.txt
samples/: mlp_learning_an_image.cu
src/: cutlass_mlp.cu  fully_fused_mlp.cu  loss.cu
tinynerf/: CMakeLists.txt  data.cpp  data.h  inference.cu  lodepng.cpp  lodepng.h  mlp_tinynerf.cu  nerf.h  utils.cpp  utils.h
